LDEV-4440 Fixed authoring and learning